modules/protocol/http/test/nullbytes-ref.txt
debug core: applying policy tcp for ipv4 next dissector
debug conn: opening connection 127.0.0.1:42071 -> 127.0.0.1:80
debug core: applying policy http for tcp_connection next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp for ipv4 next dissector
debug grammar: parse error at byte 120 for field 2 in request_line: token /[[:blank:]]+/ doesn't match
debug grammar: parse error context: ...
alert: id = = <>
	severity = low
	description = invalid http request_line
debug conn: dropping connection 127.0.0.1:42071 -> 127.0.0.1:80
debug core: applying policy tcp for ipv4 next dissector
debug core: applying policy tcp for ipv4 next dissector
debug lua: closing state
debug conn: <cleanup> connection
